Add security to Swagger API
