# infrastructure/resources/swagger/api-swagger.json
@@ -199,17 +199,32 @@
               }
             }
           },
+          "401": {
+            "description": "Invalid access credential",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/Artefact_External"
+                }
+              }
+            }
+          },
           "403": {
             "description": "User has not been authorized",
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/Artefact"
+                  "$ref": "#/components/schemas/Artefact_External"
                 }
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer authentication": []
+          }
+        ]
       }
     },
     "/": {
@@ -330,6 +345,14 @@
             ]
           }
         }
+      }
+    },
+    "securitySchemes": {
+      "Bearer authentication": {
+        "type": "http",
+        "in": "header",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
